Fixed Cart Button Alignment, Search Box and Search Button Alignment

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -39,11 +39,10 @@
 {
 	border: 1px solid #999;
 	outline: 0;
-	height: 52px;
+	height: 45px;
 	background-repeat: no-repeat; 
 	font-size: 15px;
-	margin-top: 7px;
-	padding: 0px 15px;
+	padding: 0px 10px;
     width: 750px;
     color: black;
 }
@@ -606,10 +605,10 @@
 }
 .searchBox-button
 {
-	/* width:5%; */
 	background-color: #ffe11b;
 	color: black;
 	font-weight: 500;
+	vertical-align: bottom;
 }
 .cart 
 {
@@ -617,7 +616,7 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.23),inset 1px 1px 0 0 hsla(0,0%,100%,.2);
     padding: 10px 0;
     text-align: center;
-    height: 41px;
+    height: 45px;
     border-radius: 2px;
     font-weight: 500;
     margin-top: 5px;
@@ -635,14 +634,11 @@
 	height: 16px;
 	width: 16px;
 	vertical-align: middle;
-	padding: 2px 4px;
 }
 .cart-show-icon
 {
 	background-color: rgba(0,0,0,.1);
 	    padding: 3px 6px;
-	    height: 160px;
-	    padding-right: 5px;
 }
 .retail-footer
 {
@@ -1021,9 +1017,11 @@ nav > ul > li > a:HOVER {
 
 .cart-show-button
 {
-	padding-left: 0;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.23),inset 1px 1px 0 0 hsla(0,0%,100%,.2);
-    padding: 0;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,.23),inset 1px 1px 0 0 hsla(0,0%,100%,.2);
+    padding: 0 5px;
     margin-left: 1%;
-        font-family: Roboto,Arial,sans-serif;
+    margin-right: 1%;
+    height: 45px;
+    vertical-align: bottom;
+    font-family: Roboto,Arial,sans-serif;
 }
